Host site on Convex

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "convex": "^0.10.0"
+    "convex": "^0.10.0",
+    "hono": "^3.0.3",
+    "strip-ansi": "^7.0.1",
+    "typescript": "^4.9.5"
   }
 }
