--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "sass": "^1.71.1",
     "strip-ansi": "^7.0.1",
     "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.26"
   }
 }
